# fmu_manipulation_toolbox

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  generate_linkedin_carousel.py  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.py  sitemap.xml
.github/workflows/: fmu_manipulation_toolbox-package.yml  make_doc.yml  mkdocs.yml
API/assembly/: index.html
API/checker/: index.html
API/container/: index.html
API/operations/: index.html
API/remoting/: index.html
README_MKDOCS/: index.html
abbreviations/: index.html
cli-usage/: index.html
common-use-cases/: index.html
container/: CMakeLists.txt  README.md  config.c  config.h  container.c  container.h  convert.c  convert.h  datalog.c  datalog.h  fmi2.c  fmi3.c  fmu.c  fmu.h  hash.c  hash.h  library.c  library.h  logger.c  logger.h  profile.c  profile.h  test_fmi.c  thread.c  thread.h
developer/container-txt-format/: index.html
developer/dostep-fmi-sequence/: index.html
doc/: README.md  container-vr.md  container.md  example.py  ls-bus.md
docs/: README_MKDOCS.md  abbreviations.md  cli-usage.md  common-use-cases.md  getting-started.md  gui-usage.md  index.md  installation.md  linkedin-post.md  python-api.md  troubleshooting.md
docs/API/: assembly.md  checker.md  container.md  operations.md  remoting.md
docs/developer/: container-txt-format.md  dostep-fmi-sequence.md  init-fmi-sequence.md
docs/examples/: examples.md
docs/help/: contributing.md  troubleshooting.md
docs/tutorials/: getting-started.md
docs/user-guide/: fmueditor.md  index.md  launcher.md
docs/user-guide/fmucontainer/: container-vr.md  container.md  datalog.md  gui-usage.md  ls-bus.md
docs/user-guide/fmutool/: checker.md  cli-usage.md  fmueditor.md  gui-usage.md  python-api.md  remoting.md
examples/: example.py
examples/examples/: index.html
fmu_manipulation_toolbox/: __main__.py  assembly.py  checker.py  cli.py  container.py  fmu_container.py  fmu_operations.py  fmu_split.py  gui.py  help.py  operations.py  remoting.py  split.py  terminals.py  uncontainer.py
fmu_manipulation_toolbox/cli/: datalog2pcap.py  datalogconv.py  fmucontainer.py  fmusplit.py  fmutool.py
fmu_manipulation_toolbox/gui/: __main__.py  application.py  builder.py  dropfile.py  editor.py  fmucontainer.py  fmueditor.py  fmutool.py  gui.py  gui_style.py  helper.py  style.py
fmu_manipulation_toolbox/gui/fmucontainer/: __main__.py  assembly_io.py  container_detail.py  details.py  fmu_detail.py  graph.py  tree.py  wire_detail.py
fmu_manipulation_toolbox/gui/fmueditor/: __main__.py
fmu_manipulation_toolbox/gui/fmutool/: __main__.py
getting-started/: index.html
gui-usage/: index.html
help/contributing/: index.html
help/troubleshooting/: index.html
installation/: index.html
overrides/: main.html
python-api/: index.html
remoting/: CMakeLists.txt  README.md  client.c  client.h  communication.c  communication.h  process.c  remote.c  remote.h  server.c  server.h  test_sizeof.c
search/: search_index.json
stylesheets/: extra.css
tests/: .coveragerc  test_suite.py
tests/array/: REF-container-23.txt  REF-container-32.txt  REF-container-modelDescription-2.xml  REF-container-modelDescription-3.xml  REF-container-modelDescription.xml  REF-modelDescription.xml  REF-results-array-23.csv  REF-results-array-3.csv  REF-results-array.csv  array-2.json  array-23.json  array-3.json  array-32.json  array.json  array2scalar-2.fmu  array2scalar-3.fmu  array2scalar.fmu  scalar2array-2.fmu  scalar2array-3.fmu  scalar2array.fmu
tests/array/multi/: REF-container3.txt  array-2.fmu  array-3.fmu  multi2.json  vec-2.fmu  vec-3.fmu
tests/containers/VanDerPol/: REF-datalog.txt  REF-results-VanDerPol-vr2.csv  REF-results-VanDerPol.csv  VanDerPol-vr.json  VanDerPol.json  sched2.fmu  sched3.fmu
tests/containers/arch/: REF-cli-flat-dump.json  REF-flat-dump.json  REF-hierarchical-dump.json  REF-results-hierarchical.csv  REF-results-reversed.csv  REF-results-sub.csv  REF-reversed-dump.json  hierarchical.json  nested.json  reversed.json
tests/containers/bouncing_ball/: REF-bouncing-profiling.json  REF-bouncing-seq.json  REF-bouncing.json  REF-container-3.txt  REF-container-profiling.txt  REF-container-seq.txt  REF-container.txt  REF-datalog.txt  REF-modelDescription-3.xml  REF-modelDescription-profiling.xml  REF-results-bouncing-3.csv  REF-results-bouncing-seq.csv
tests/containers/ssp/: REF-bouncing-dump.json  REF-results-bouncing.csv  REF-split-bouncing.json
tests/containers/start/: REF-container.txt  REF-modelDescription.xml  REF-results-slx.csv  container-slx.fmu  g.json  slx.fmu  slx.json
tests/fmi3/: container-passthrough.fmu  passthrough.json
tests/fmi3/bouncing_ball/: bb_position.fmu  bb_velocity.fmu
tests/fmi3/passthrough/: REF-container.txt  REF-results-container-passthrough.csv  constant.fmu  constant3.fmu  not2.fmu  passthrough.fmu  passthrough.json  passthrough3.fmu
tests/ls-bus/: DemoCanBusSimulation.fmu  DemoCanNodeTriggeredOutput.fmu  REF-bus+nodes-datalog.csv  REF-log-bus+nodes.txt  REF-log-nodes-only.txt  REF-nodes-only-datalog.csv  bus+node.json  bus+nodes.json  bus.fmu  bus.json  node1.fmu  nodes-only.json
tests/remoting/: REF-results-bouncing_ball-win32.csv  bouncing_ball-win32.fmu
tests/split/: REF-container-V0.json  REF-container-V1.json  REF-container-V2.json  REF-container-V3.json  REF-container-V4.json  REF-container-V5.json  REF-container-array-23.json  REF-container-array-3.json  REF-container-array-32.json  REF-container-ls-bus.json  container-V0.fmu  container-V1.fmu  container-V2.fmu  container-V3.fmu  container-V4.fmu  container-V5.fmu  container-array-23.fmu  container-array-3.fmu  container-array-32.fmu  container-ls-bus.fmu
troubleshooting/: index.html
tutorials/getting-started/: index.html
user-guide/: index.html
user-guide/fmucontainer/container/: index.html
user-guide/fmucontainer/container-vr/: index.html
user-guide/fmucontainer/datalog/: index.html
user-guide/fmucontainer/gui-usage/: index.html
user-guide/launcher/: index.html
(+28 files in other folders)
